# yt-is-down

./: .gitignore  DISTRIBUTION_QUICKSTART.md  ICON_SOLUTIONS.md  LICENSE  MANIFEST.in  README.md  YouTube-Downloader-CLI.spec  YouTube-Downloader-GUI.spec  build_executable.py  cli.py  create_icon.py  downloader.py  gui.py  prepare_release.py  pyproject.toml  requirements.txt  setup.py  youtube_downloader.spec
config/: __init__.py  download_config.py  error_messages.py
docs/: README.md  YouTube-gentle-scraping-guide.md  YouTube-gentle-scraping-guide.md.bak  bug-fix-mp4-deletion.md  chat-gpt-code-review-report.md  chatgpt-review-action-plan.md  code-review-package.md  distribution-guide.md  github-release-guide.md  implementation-progress.md  refactoring-summary.md  video-in-playlist-feature.md  yt-dlp-gentle-scraping-guide.md
docs/old/: README.md  code-review-report.md  complete-code-review.md  critical-code-snippets.md  refactoring-progress.md  refactoring-tasks.md
